--- a/index.html
+++ b/index.html
@@ -24,7 +24,20 @@
   </head>
 
   <body>
-    <main></main>
+    <main>
+      <div class="container">
+        <header>
+          <h1 class="logo">Jogo da Velh<i class="icon-hash"></i></h1>
+        </header>
+
+        <div class="buttons">
+          <button class="button" onclick="newGameAction()">Novo Jogo</button>
+          <button class="button" onclick="ModalLoadGame.open()">
+            Carregar
+          </button>
+        </div>
+      </div>
+    </main>
 
     <footer>
       <p>© Rafael Ottoni</p>
@@ -53,9 +66,5 @@
     <script src="./scripts/game.js"></script>
     <script src="./scripts/html.js"></script>
     <script src="./scripts/interface.js"></script>
-
-    <script>
-      homePage()
-    </script>
   </body>
 </html>
