--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
       </div>
     </div>
 
+
+
+    <button class="back-to-home" onclick="ButtonHomePage.clickButtonHome()"><i class="icon-home"></i></a>
+
     <script src="./scripts/game.js"></script>
     <script src="./scripts/html.js"></script>
     <script src="./scripts/interface.js"></script>
